fix (lle-710): center align certain link text

--- a/src/_button.scss
+++ b/src/_button.scss
@@ -141,7 +141,7 @@
   border: 0;
   background: none;
   color: #333333;
-  text-align: left;
+  text-align: center;
   text-decoration: underline;
   &:disabled {
     cursor: not-allowed !important;
